# ndarray-numtest

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: assert.rs  lib.rs  prelude.rs  random.rs  random_init.rs
tests/: assert.rs  random.rs
