[package]
name = "ndarray-numtest"
version = "0.2.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "Linear algebra package for rust-ndarray using LAPACK"
documentation = "https://docs.rs/ndarray-numtest/"
repository = "https://github.com/termoshtt/ndarray-numtest"
keywords = ["ndarray"]
license = "MIT"

[dependencies]
ndarray = "0.8"
ndarray-rand = "0.4"
rand = "0.3"
float-cmp = "0.2"
num-complex = "0.1.35"

[dev-dependencies]
ndarray-rand = "0.4"
